shell/panelview.cpp
@@ -325,7 +325,7 @@ void PanelView::setThickness(int value)
     // For thickness, always use the default thickness value for horizontal/vertical panel
     configDefaults().writeEntry("thickness", value);
     m_corona->requestApplicationConfigSync();
-    positionAndResizePanel();
+    queuePositionAndResizePanel();
 }
 
 int PanelView::length() const
@@ -341,7 +341,7 @@ void PanelView::setLength(int value)
 
     m_contentLength = value;
 
-    positionAndResizePanel();
+    queuePositionAndResizePanel();
 }
 
 int PanelView::maximumLength() const
@@ -365,7 +365,7 @@ void PanelView::setMaximumLength(int length)
     Q_EMIT maximumLengthChanged();
     m_corona->requestApplicationConfigSync();
 
-    positionAndResizePanel();
+    queuePositionAndResizePanel();
 }
 
 int PanelView::minimumLength() const
@@ -389,7 +389,7 @@ void PanelView::setMinimumLength(int length)
     Q_EMIT minimumLengthChanged();
     m_corona->requestApplicationConfigSync();
 
-    positionAndResizePanel();
+    queuePositionAndResizePanel();
 }
 
 bool PanelView::floating() const
@@ -558,7 +558,7 @@ void PanelView::setLengthMode(PanelView::LengthMode mode)
             m_corona->requestApplicationConfigSync();
         }
         Q_EMIT lengthModeChanged();
-        positionAndResizePanel();
+        queuePositionAndResizePanel();
         Q_EMIT m_corona->availableScreenRegionChanged(containment()->screen());
     }
 }
@@ -694,6 +694,12 @@ void PanelView::positionPanel()
     KWindowEffects::slideWindow(this, slideLocation(), -1);
 }
 
+void PanelView::queuePositionAndResizePanel()
+{
+    m_geometryDirty = true;
+    update();
+}
+
 void PanelView::positionAndResizePanel()
 {
     if (!containment()) {
@@ -727,6 +733,7 @@ void PanelView::positionAndResizePanel()
     Q_EMIT m_corona->availableScreenRegionChanged(containment()->screen());
 
     KWindowEffects::slideWindow(this, slideLocation(), -1);
+    m_geometryDirty = false;
 }
 
 QRect PanelView::dogdeGeometryByDistance(int distance) const
@@ -1184,6 +1191,14 @@ void PanelView::adaptToScreen()
 bool PanelView::event(QEvent *e)
 {
     switch (e->type()) {
+    case QEvent::UpdateRequest:
+        if (m_geometryDirty) {
+            positionAndResizePanel();
+        }
+        break;
+    case QEvent::Show:
+        positionAndResizePanel();
+        break;
     case QEvent::Enter:
         m_containsMouse = true;
         if (edgeActivated()) {
